@@ -75,9 +75,9 @@
           <!-- <li>
             <a [routerLinkActive]="'active'" [routerLink]="['orders', 'all-orders']">All Orders</a>
           </li> -->
-          <!-- <li>
+          <li>
             <a [routerLinkActive]="'active'" [routerLink]="['orders', 'promotions']">Promotions</a>
-          </li> -->
+          </li>
           <li>
             <a [routerLinkActive]="'active'" [routerLink]="['orders', 'customers']">Customers</a>
           </li>
