@@ -6,12 +6,14 @@ import { WsCurrencyPipe } from '../../../pipes/ws-currency.pipe';
 import { WsLimitCtrlPipe } from '../../../pipes/ws-limit-ctrl.pipe';
 import { WsDiscountconverterPipe } from '../../../pipes/ws-discountconverter.pipe';
 import { PipeRoutingModule } from './pipe-routing.module';
+import { WsEmptyDashPipe } from 'src/app/pipes/ws-empty-dash.pipe';
 
 
 @NgModule({
   declarations: [
     WsPassDatePipe,
     WsCurrencyPipe,
+    WsEmptyDashPipe,
     WsDiscountconverterPipe,
     WsLimitCtrlPipe,
   ],
@@ -22,6 +24,7 @@ import { PipeRoutingModule } from './pipe-routing.module';
   exports: [
     WsPassDatePipe,
     WsCurrencyPipe,
+    WsEmptyDashPipe,
     WsDiscountconverterPipe,
     WsLimitCtrlPipe,
   ]
