@@ -6,8 +6,12 @@
 ---------------------------------------------
 - 2020-12-16                                -
 ---------------------------------------------
-.: WSM: Feature: Customer Module (WSM-253)
+.: WSM: Feature: Promotion Module (WSM-252)
 
+---------------------------------------------
+- 2020-12-16                                -
+---------------------------------------------
+.: WSM: Feature: Customer Module (WSM-253)
 
 - v1.0.1050                                 -
 ---------------------------------------------
